--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -76,7 +76,7 @@
   --wp--preset--shadow--crisp: 6px 6px 0px rgba(0, 0, 0, 1);
 }
 html:root {
-  --tp-theme-primary: #3d002e ;
+  --tp-theme-primary: #8A5A0D ;
   --tp-theme-pruple: #8247FF;
   --tp-theme-third: #E94D35;
   --tp-theme-rgba-primary: 249, 81, 29;
