--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -49,7 +49,7 @@
 .closeMenu {
   background: none;
   border: none;
-  color: #3d002e;
+  color: #8A5A0D;
   font-size: 24px;
   cursor: pointer;
   align-self: center;
@@ -340,7 +340,7 @@
   .dropdownArrow {
     background: none;
     border: none;
-    color: #3d002e;
+    color: #8A5A0D;
     font-size: 16px;
     cursor: pointer;
   }
@@ -406,7 +406,7 @@
 .dropdownArrow {
   background: none;
   border: none;
-  color: #3d002e;
+  color: #8A5A0D;
   font-size: 16px;
   cursor: pointer;
 }
